<resources>
    <string name="app_name">Android Personal Budget</string>
    <string name="description">Description</string>
    <string name="date_of_outgoing">Date of outgoing</string>
    <string name="the_amount_spent">The amount spent</string>
    <string name="add">Add</string>
    <string name="add_outgoing">Add outgoing</string>
    <string name="add_error_sum">type the outgoing sum</string>
    <string name="add_error_description">type the description of the outgoing</string>
    <string name="add_error_sum_invalid">invalid amount spent</string>

    <string name="lv_outgoing_row_date">Date</string>
    <string name="lv_outgoing_row_category">Category</string>
    <string name="lv_outgoing_row_amount">Amount</string>
    <string name="add_outgoing_row_logo">logo</string>
    <string name="lv_outgoing_row_default_value">-</string>
    <string name="lv_outgoing_row_amount_value">%1$s lei</string>
    <string name="add_error">Some errors occurred:</string>

    <string-array name="outgoing_category_values">
        <item>Mâncare</item>
        <item>Transport</item>
        <item>Școală</item>
        <item>Timp liber</item>
        <item>Întreținere</item>
        <item>Datorii</item>
    </string-array>
    <string name="lv_outgoing_row_description">Description</string>
    <string name="outgoing_status">Outgoings Status</string>
    <string name="chart_label">%1$s - %2$d</string>
    <string name="retrieve_online_prices">Download prices online</string>
</resources>