<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lvExpenseRowBackgroundPast"
    android:id="@+id/row_layout">

    <ImageView
        android:id="@+id/iv_lv_outgoing_row_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="logo"
        android:src="@drawable/ic_baseline_account_balance_wallet_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_lv_outgoing_row_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="date"
        android:src="@drawable/ic_baseline_date_range_24"
        app:layout_constraintEnd_toStartOf="@id/tv_lv_outgoing_row_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_lv_outgoing_row_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/lv_outgoing_row_category"
        android:src="@drawable/ic_baseline_category_24"
        app:layout_constraintEnd_toStartOf="@id/tv_lv_outgoing_row_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_lv_outgoing_row_date" />

    <ImageView
        android:id="@+id/iv_lv_outgoing_row_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/lv_outgoing_row_description"
        android:src="@drawable/ic_baseline_text_snippet_24"
        app:layout_constraintEnd_toStartOf="@id/tv_lv_outgoing_row_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_lv_outgoing_row_category" />

    <ImageView
        android:id="@+id/iv_lv_outgoing_row_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/lv_outgoing_row_amount"
        android:src="@drawable/ic_baseline_attach_money_24"
        app:layout_constraintEnd_toStartOf="@id/tv_lv_outgoing_row_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_lv_outgoing_row_description" />

    <TextView
        android:id="@+id/tv_lv_outgoing_row_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/iv_lv_outgoing_row_date"
        app:layout_constraintEnd_toStartOf="@id/iv_lv_outgoing_row_logo"
        app:layout_constraintStart_toEndOf="@id/iv_lv_outgoing_row_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lv_outgoing_row_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_lv_outgoing_row_category"
        app:layout_constraintEnd_toStartOf="@id/iv_lv_outgoing_row_logo"
        app:layout_constraintStart_toEndOf="@id/iv_lv_outgoing_row_category"
        app:layout_constraintTop_toBottomOf="@id/iv_lv_outgoing_row_date" />

    <TextView
        android:id="@+id/tv_lv_outgoing_row_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_lv_outgoing_row_description"
        app:layout_constraintEnd_toStartOf="@id/iv_lv_outgoing_row_logo"
        app:layout_constraintStart_toEndOf="@id/iv_lv_outgoing_row_description"
        app:layout_constraintTop_toBottomOf="@id/iv_lv_outgoing_row_category" />

    <TextView
        android:id="@+id/tv_lv_outgoing_row_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_lv_outgoing_row_amount"
        app:layout_constraintEnd_toStartOf="@id/iv_lv_outgoing_row_logo"
        app:layout_constraintStart_toEndOf="@id/iv_lv_outgoing_row_amount"
        app:layout_constraintTop_toBottomOf="@id/tv_lv_outgoing_row_description" />


</androidx.constraintlayout.widget.ConstraintLayout>